# mdcv

./: .gitignore  LICENSE  MANIFEST.in  README.md  _config.yaml  build.ps1  example.md  pyproject.toml  requirements.txt
src/mdcv/: __init__.py  main.py
src/mdcv/assets/css/: style.css
src/mdcv/templates/: base.html  minimal-cols.html  minimal.html  raw.html
