[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdcv"
version = "0.0.0"
description = "Convert a markdown file to a nice HTML page."
keywords = ["Python", "Markdown", "CV", "Resume"]
authors = [{name = "Lewis Dunne"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "Jinja2",
    "markdown",
    "PyYAML",
]
